--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="mettre içi l'url vers une photo de moi"> <!--attention-->
     <meta property="og:description" content="Nikola, UI/UX Designer à la recherche d'un emploi en Belgique.">
     <meta property="og:title" content="Nikola Henry | UI/UX Designer portfolio">
-    <meta property="og:url" content="besoin d'une url de la page index"> <!--attention-->
+    <meta property="og:url" content="https://nikolahenry.netlify.com/"> <!--attention-->
     <meta property="og:type" content="portfolio">
     <!--Styles-->
     <link rel="stylesheet" href="/styles/style.css">
