--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nikola Henry | UI UX Designer portfolio</title>
+    <title>Nikola Henry 👋 UI UX Designer portfolio</title>
     <!--Metadonnées SEO-->
     <meta name="author" content="Nikola Henry">
     <meta name="description" content="Bienvenue sur mon portfolio. Je suis Nikola, un UI/UX Designer à la recherche d'un emploi en Belgique. Vous trouverez içi mon parcours et mes réalisations.">
@@ -15,6 +15,7 @@
     <meta property="og:type" content="portfolio">
     <!--Styles-->
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="icon" type="image/png" href="img\emoji\rocket.png">
 </head>
 <body>
     <nav class="nav">
