--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="portfolio">
     <!--Styles-->
     <link rel="stylesheet" href="/styles/style.css">
-    <link rel="icon" type="image/png" href="img\emoji\rocket.png">
+    <link rel="icon" type="image/png" href="img/emoji/rocket.png">
 </head>
 <body>
     <nav class="nav">
@@ -81,16 +81,16 @@
             </div>
             <section class="works_links">
                 <a href="#">
-                    <img src="img\content\amal_cover.jpg" alt="Architecture Transmédia" title="Projet Amal - Architecture transmédia">
+                    <img src="img/content/amal_cover.jpg" alt="Architecture Transmédia" title="Projet Amal - Architecture transmédia">
                 </a>
                 <a href="#">
-                    <img src="img\content\playzone_interface_big.png" alt="UI/UX Design" title="Domaine de Chevetogne - UI/UX Design">
+                    <img src="img/content/playzone_interface_big.png" alt="UI/UX Design" title="Domaine de Chevetogne - UI/UX Design">
                 </a>
                 <a href="#">
-                    <img src="img\content\vector_2.png" alt="Illustration Web" title="Illustration vectorielle orientée web">
+                    <img src="img/content/vector_2.png" alt="Illustration Web" title="Illustration vectorielle orientée web">
                 </a>
                 <a href="#">
-                    <img src="img\content\tag_cover.png" alt="Design graphique" title="Projet personnel - Créations numériques">
+                    <img src="img/content/tag_cover.png" alt="Design graphique" title="Projet personnel - Créations numériques">
                 </a>
             </section>
         </section>
@@ -154,12 +154,12 @@
             <section class="pro_blocks">
                 <ul>
                     <li class="pro_laniche">
-                        <div pro_title>
+                        <div class="pro_title">
                             <h3>La Niche</h3>
-                            <img src="img\logos\laniche.png" alt="Logo La Niche" title="La Niche, agence web namuroise - Unleash the right digital solutions">
+                            <img src="img/logos/laniche.png" alt="Logo La Niche" title="La Niche, agence web namuroise - Unleash the right digital solutions">
                             <button type="button" class="pro_dropdown"></button>
                         </div>
-                        <div pro_details>
+                        <div class="pro_details">
                             <h4>Stage de fin de formation</h4>
                             <ul>
                                 <li>Branding</li>
@@ -174,12 +174,12 @@
                         </div>
                     </li>
                     <li class="pro_twist">
-                        <div pro_title>
+                        <div class="pro_title">
                             <h3>Cluster TWIST</h3>
-                            <img src="img\logos\twist.png" alt="Logo Cluster TWIST" title="TWIST, cluster orienté business d'entreprises wallones du secteur audiovisuel">
+                            <img src="img/logos/twist.png" alt="Logo Cluster TWIST" title="TWIST, cluster orienté business d'entreprises wallones du secteur audiovisuel">
                             <button type="button" class="pro_dropdown"></button>
                         </div>
-                        <div pro_details>
+                        <div class="pro_details">
                             <h4>Stage scolaire</h4>
                             <ul>
                                 <li>Gestion de newsletters</li>
@@ -197,14 +197,14 @@
                         </div>
                     </li>
                     <li class="pro_fdml">
-                        <div pro_title>
+                        <div class="pro_title">
                             <h3>FDML
                                 <span>Fédération des Maisons de la Laïcité</span>
                             </h3>
-                            <img src="img\logos\fdml.png" alt="Logo Fédération des Maisons de la Laïcité" title="FDML, Fédération des Maisons de la Laïcité">
+                            <img src="img/logos/fdml.png" alt="Logo Fédération des Maisons de la Laïcité" title="FDML, Fédération des Maisons de la Laïcité">
                             <button type="button" class="pro_dropdown"></button>
                         </div>
-                        <div pro_details>
+                        <div class="pro_details">
                             <h4>Stage scolaire</h4>
                             <ul>
                                 <li>Création de logos</li>
@@ -228,7 +228,7 @@
             <ul class="les_avis"> <!--attention, besoin de vrai contenu-->
                 <li class="avis">
                     <figure>
-                        <img src="img\testimonials\avis_1.png" alt="portrait de Jean-Michel Saive" title="Jean-Michel Saive, cet incroyable pongiste belge !">
+                        <img src="img/testimonials/avis_1.png" alt="portrait de Jean-Michel Saive" title="Jean-Michel Saive, cet incroyable pongiste belge !">
                         <figcaption>
                             <h3 class="avis_name">Jean-Michel Saive</h3>
                             <p class="avis_position">Formateur UX @techobel</p>
@@ -238,7 +238,7 @@
                 </li>
                 <li class="avis">
                     <figure>
-                        <img src="img\testimonials\avis_2.png" alt="portrait de Claudy Focant" title="Bonjour, je me présente, Claudy Focant, directeur des abbatoirs d'Anderlecht!">
+                        <img src="img/testimonials/avis_2.png" alt="portrait de Claudy Focant" title="Bonjour, je me présente, Claudy Focant, directeur des abbatoirs d'Anderlecht!">
                         <figcaption>
                             <h3 class="avis_name">Claudy Focant</h3>
                             <p class="avis_position">Directeur des abbatoirs d'Anderlecht</p>
@@ -248,7 +248,7 @@
                 </li>
                 <li class="avis">
                     <figure>
-                        <img src="img\testimonials\avis_3.png" alt="portrait de Amyyy" title="Capu give me a real testimonial already !">
+                        <img src="img/testimonials/avis_3.png" alt="portrait de Amyyy" title="Capu give me a real testimonial already !">
                         <figcaption>
                             <h3 class="avis_name">Amy Das Gupta</h3>
                             <p class="avis_position">UX Designer</p>
@@ -261,7 +261,7 @@
     </main>
     <footer class="footer">
         <section class="footer_block">
-            <img src="img\deco\separator2.svg" alt="Fin du contenu">
+            <img src="img/deco/separator2.svg" alt="Fin du contenu">
             <section class="footer_content">
                 <h2 class="footer_title">Entrons en contact</h2>
                 <div class="contact">
