work.html + dropdown menu

--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
             <a href="#" class="home_link">Nikola</a>
             <ul class="nav_links">
                 <li><a href="about.html">à propos</a></li>
-                <li><a href="#">travaux</a></li>
+                <li>
+                    <a href="work.html">travaux</a>
+                    <ul class=" hidden dropdown_menu">
+                        <li class="sub_menu"><a href="#">UX/UI Design</a></li>
+                        <li class="sub_menu"><a href="#">Architecture Transmédia</a></li>
+                        <li class="sub_menu"><a href="#">Design graphique</a></li>
+                        <li class="sub_menu"><a href="#">Illustrations web</a></li>
+                    </ul>
+                </li>
                 <li><a href="https://nikolahenry.typeform.com/to/SN907B" target="_blank">contact</a></li>
             </ul>
         </section>
