html page playzone case study : check

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>
                     <a href="work.html">travaux</a>
                     <ul class=" hidden dropdown_menu">
-                        <li class="sub_menu"><a href="#">UX/UI Design</a></li>
+                        <li class="sub_menu"><a href="playzone.html">UX/UI Design</a></li>
                         <li class="sub_menu"><a href="#">Architecture Transmédia</a></li>
                         <li class="sub_menu"><a href="#">Design graphique</a></li>
                         <li class="sub_menu"><a href="#">Illustrations web</a></li>
@@ -79,8 +79,8 @@
         </header>
         <section class="description">
             <h2>Je suis...</h2>
-            <p>un jeune designer, toujours curieux, et qui a constamment <span class="accent">envie d'en apprendre plus et de s'améliorer !</span></p>
-            <p>En équipe, je mets les gens d'accord et les <span class="accent">fais avancer.</span> Je fais prévaloir l'avis du groupe sur mon opinion personnelle. Je ressens vite comment les gens fonctionnent entre eux et j'agis en conséquence. Je prends <span class="accent">plaisir à rendre service</span> et apporter mon soutien technique dans un projet où <span class="accent">je m'implique.</span></p>
+            <p>un jeune designer, toujours curieux, et qui a constamment <em class="accent">envie d'en apprendre plus et de s'améliorer !</em></p>
+            <p>En équipe, je mets les gens d'accord et les <em class="accent">fais avancer.</em> Je fais prévaloir l'avis du groupe sur mon opinion personnelle. Je ressens vite comment les gens fonctionnent entre eux et j'agis en conséquence. Je prends <em class="accent">plaisir à rendre service</em> et apporter mon soutien technique dans un projet où <em class="accent">je m'implique.</em></p>
         </section>
         <article class="realisations">
             <div class="title">
