--- a/work.html
+++ b/work.html
@@ -26,7 +26,7 @@
                 <li>
                     <a href="#">travaux</a>
                     <ul class=" hidden dropdown_menu">
-                        <li class="sub_menu"><a href="#">UX/UI Design</a></li>
+                        <li class="sub_menu"><a href="playzone.html">UX/UI Design</a></li>
                         <li class="sub_menu"><a href="#">Architecture Transmédia</a></li>
                         <li class="sub_menu"><a href="#">Design graphique</a></li>
                         <li class="sub_menu"><a href="#">Illustrations web</a></li>
@@ -37,7 +37,7 @@
         </section>
     </nav>
     <main class="content">
-        <header class="about container">
+        <header class="projects container">
             <h1>Mes projets</h1>
             <article class="works container">
                 <ul class="my_works">
