--- a/playzone.html
+++ b/playzone.html
@@ -27,7 +27,7 @@
                     <a href="work.html">travaux</a>
                     <ul class=" hidden dropdown_menu">
                         <li class="sub_menu"><a href="#">UX/UI Design</a></li>
-                        <li class="sub_menu"><a href="#">Architecture Transmédia</a></li>
+                        <li class="sub_menu"><a href="transmedia.html">Architecture Transmédia</a></li>
                         <li class="sub_menu"><a href="#">Design graphique</a></li>
                         <li class="sub_menu"><a href="#">Illustrations web</a></li>
                     </ul>
@@ -47,7 +47,7 @@
                     UX/UI Design
                     <span>étude de cas</span>
                 </h2>
-                <a href="#">
+                <a href="transmedia.html">
                     Suivant
                     <span>Projet Amal (transmédia)</span>
                 </a>
