--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <ul class=" hidden dropdown_menu">
                         <li class="sub_menu"><a href="playzone.html">UX/UI Design</a></li>
                         <li class="sub_menu"><a href="transmedia.html">Architecture Transmédia</a></li>
-                        <li class="sub_menu"><a href="#">Design graphique</a></li>
+                        <li class="sub_menu"><a href="design.html">Design graphique</a></li>
                         <li class="sub_menu"><a href="#">Illustrations web</a></li>
                     </ul>
                 </li>
