--- a/transmedia.html
+++ b/transmedia.html
@@ -28,7 +28,7 @@
                     <ul class=" hidden dropdown_menu">
                         <li class="sub_menu"><a href="playzone.html">UX/UI Design</a></li>
                         <li class="sub_menu"><a href="#">Architecture Transmédia</a></li>
-                        <li class="sub_menu"><a href="#">Design graphique</a></li>
+                        <li class="sub_menu"><a href="design.html">Design graphique</a></li>
                         <li class="sub_menu"><a href="#">Illustrations web</a></li>
                     </ul>
                 </li>
@@ -47,7 +47,7 @@
                     Architecture transmédia
                     <span>étude de cas</span>
                 </h2>
-                <a href="#">
+                <a href="design.html">
                     Suivant
                     <span>Design graphique</span>
                 </a>
