html du site : check !!

--- a/playzone.html
+++ b/playzone.html
@@ -29,7 +29,7 @@
                         <li class="sub_menu"><a href="#">UX/UI Design</a></li>
                         <li class="sub_menu"><a href="transmedia.html">Architecture Transmédia</a></li>
                         <li class="sub_menu"><a href="design.html">Design graphique</a></li>
-                        <li class="sub_menu"><a href="#">Illustrations web</a></li>
+                        <li class="sub_menu"><a href="illustration.html">Illustrations web</a></li>
                     </ul>
                 </li>
                 <li><a href="https://nikolahenry.typeform.com/to/SN907B" target="_blank">contact</a></li>
@@ -39,7 +39,7 @@
     <main class="content">
         <header class="playzone container">
             <nav class="second_nav">
-                <a href="#">
+                <a href="illustration.html">
                     Précédent
                     <span>Illustrations web</span>
                 </a>
