--- a/illustration.html
+++ b/illustration.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nikola Henry 👋 Design graphique showcase</title>
+    <title>Nikola Henry 👋 Illustrations web showcase</title>
     <!--Metadonnées SEO-->
     <meta name="author" content="Nikola Henry">
     <meta name="description" content="Bienvenue sur mon portfolio. Je suis Nikola, un UI/UX Designer à la recherche d'un emploi en Belgique. Vous trouverez içi mon parcours et mes réalisations.">
@@ -28,8 +28,8 @@
                     <ul class=" hidden dropdown_menu">
                         <li class="sub_menu"><a href="playzone.html">UX/UI Design</a></li>
                         <li class="sub_menu"><a href="transmedia.html">Architecture Transmédia</a></li>
-                        <li class="sub_menu"><a href="#">Design graphique</a></li>
-                        <li class="sub_menu"><a href="illustration.html">Illustrations web</a></li>
+                        <li class="sub_menu"><a href="design.html">Design graphique</a></li>
+                        <li class="sub_menu"><a href="#">Illustrations web</a></li>
                     </ul>
                 </li>
                 <li><a href="https://nikolahenry.typeform.com/to/SN907B" target="_blank">contact</a></li>
@@ -37,23 +37,23 @@
         </section>
     </nav>
     <main class="content">
-        <header class="signature container">
+        <header class="illu_web container">
             <nav class="second_nav">
-                <a href="transmedia.html">
+                <a href="design.html">
                     Précédent
-                    <span>Projet Amal (transmédia)</span>
+                    <span>Design graphique</span>
                 </a>
                 <h2 class="case_type">
-                    Design graphique
+                    Illustrations web
                     <span>Showcase</span>
                 </h2>
-                <a href="illustration.html">
+                <a href="playzone.html">
                     Suivant
-                    <span>Illustrations web</span>
+                    <span>Domaine de Chevetogne (UX/UI Design)</span>
                 </a>
             </nav>
             <h1>
-                Créations numériques
+                Dessins vectoriels
                 <span>Projet personnel</span>
             </h1>
             <section class="overview container">
@@ -65,75 +65,28 @@
                     <li>
                         <h4>Service</h4>
                         <p>Illustration</p>
-                        <p>Direction artistique</p>
-                        <p>Exploration visuelle</p>
                     </li>
                     <li>
                         <h4>Outils</h4>
-                        <p>Photoshop</p>
+                        <p>Affinity Designer</p>
                         <p>Illustrator</p>
                     </li>
                 </ul>
             </section>
         </header>
-        <article class="design_case_study"> <!--La case study UX-->
+        <article class="illu_case_study"> <!--La case study UX-->
             <section class="bref">
                 <h3>En bref</h3>
-                <p>Depuis 10 ans, j’explore divers styles visuels sous forme de petits formats, principalement grâce à l’outil Photoshop. Petit saut dans le temps : en 2010, Internet est peuplé de communautés diverses sous forme de forums. époque révolue depuis la montée en puissance des réseaux sociaux, ces forums fourmillaient de centaines de membres, rassemblés autour d’un même sujet, ou d’une même passion. </p>
-                <p>J’étais un membre assez actif sur certains d’entre eux, où la communauté se concentrait sur la création de “signatures”. Celles-ci sont des décorations assez petites de l’espace signature des posts publiés sur ces forums.</p>
-                <p>J’ai fait mes premiers pas sur Photoshop à 16 ans, et depuis, je n’ai plus su arrêter ! C’est également ce qui m’a poussé à choisir ma voie profesionnelle : le design et le graphisme.</p>
+                <p>Lors de ma veille continue en inspiration design UI/UX, j’ai découvert qu’une part de plus en plus importante des sites web et applications mobiles étaient fournis en illustrations en tous genres. J’ai donc décidé de m’y intéresser et de tirer profit de mon enseignement en illustration 2D pour proposer des visuels modernes qui s’allient avec des éléments d’interface.</p>
+                <p><em>Note :</em> le contenu de cette page est voué à s’étoffer régulièrement !</p>
             </section>
             <section class="showcase">
-                <ul class="tags_grid">
-                    <li class="tag">
-                        <img src="img/content/tag_1.png" alt="création 1" title="Création graphique">
-                    </li>
-                    <li class="tag">
-                        <img src="img/content/tag_2.png" alt="création 2" title="Création graphique">
-                    </li>
-                    <li class="tag">
-                        <img src="img/content/tag_3.png" alt="création 3" title="Création graphique">
-                    </li>
-                    <li class="tag">
-                        <img src="img/content/tag_4.png" alt="création 4" title="Création graphique">
-                    </li>
-                    <li class="tag">
-                        <img src="img/content/tag_5.png" alt="création 5" title="Création graphique">
-                    </li>
-                    <li class="tag">
-                        <img src="img/content/tag_6.png" alt="création 6" title="Création graphique">
-                    </li>
-                    <li class="tag">
-                        <img src="img/content/tag_7.png" alt="création 7" title="Création graphique">
-                    </li>
-                    <li class="tag">
-                        <img src="img/content/tag_8.png" alt="création 8" title="Création graphique">
-                    </li>
-                    <li class="tag">
-                        <img src="img/content/tag_9.png" alt="création 9" title="Création graphique">
-                    </li>
-                    <li class="tag">
-                        <img src="img/content/tag_10.png" alt="création 10" title="Création graphique">
-                    </li>
-                    <li class="tag">
-                        <img src="img/content/tag_11.png" alt="création 11" title="Création graphique">
-                    </li>
-                    <li class="tag">
-                        <img src="img/content/tag_12.png" alt="création 12" title="Création graphique">
-                    </li>
-                </ul>
-                <aside class="selection_travaux">
-                    <p>Sélection de travaux</p>
-                </aside>
-                <div class="tagging">
-                    <p>Ces signatures, appelées “tags” en anglais, ont un format généralement assez petit, car elles sont résolument orientées web. Le but est de développer un style graphique personnel, à chaque fois différent, pour ensuite le partager à d’autres amateurs du genre.</p>
-                    <p>L’avantage de la taille de ce format, c’est qu’elle impose de se réinventer à chaque fois, que ce soit dans le cadrage, la technique, ou le style. Cela permet de développer une sacré diversité, et d’être capable de passer d’un style à l’autre sans souci.</p>
-                    <p>Un autre avantage de cette taille est la vitesse d’exécution. Il faut rarement plus de deux heures pour être satisfait de son résultat. Ce qui permet de ne pas trop s’impliquer émotionnellement dans son oeuvre. Si l’on n’est pas rapidement satisfait, il est facile de tout effacer et reprendre à zéro. Cela force également d’arriver rapidement à un résultat qui nous plait, donc on maximise son efficacité.</p>
-                </div>
+                <img src="img/content/vector_1.png" alt="Illu 1" title="Illustration faite sur Affinity Designer" class="illustration">
+                <img src="img/content/vector_2.png" alt="Illu 2" title="Illustration faite sur Affinity Designer et Illustrator" class="illustration">
             </section>
             <div class="more">
-                <h4>Plus de "tags" sur mon Behance !</h4>
-                <a href="https://www.behance.net/NikoGFX" target="_blank">Voir plus</a>
+                <h4>Plus d'illus sur mon Dribbble !</h4>
+                <a href="https://dribbble.com/NikoGFX" target="_blank">Voir plus</a>
             </div>
         </article>
         <article class="cta">
