--- a/transmedia.html
+++ b/transmedia.html
@@ -29,7 +29,7 @@
                         <li class="sub_menu"><a href="playzone.html">UX/UI Design</a></li>
                         <li class="sub_menu"><a href="#">Architecture Transmédia</a></li>
                         <li class="sub_menu"><a href="design.html">Design graphique</a></li>
-                        <li class="sub_menu"><a href="#">Illustrations web</a></li>
+                        <li class="sub_menu"><a href="illustration.html">Illustrations web</a></li>
                     </ul>
                 </li>
                 <li><a href="https://nikolahenry.typeform.com/to/SN907B" target="_blank">contact</a></li>
