nav + footer en scss

--- a/about.html
+++ b/about.html
@@ -221,7 +221,7 @@
         <section class="footer_block">
             <img src="img/deco/separator2.svg" alt="Fin du contenu">
             <section class="footer_content">
-                <h2 class="footer_title">Entrons en contact</h2>
+                <h2 class="footer_title">Entrons en contact !</h2>
                 <div class="contact">
                     <a href="mailto:henrynikola@gmail.com" class="mail">henrynikola@gmail.com</a>
                     <div class="social social_row">
