CSS desktop index : check

--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
             <section class="welcome">
                 <h1>Nikola Henry</h1>
                 <div class="details">
-                    <h2>UX/UI Designer</h2>
-                    <p>à la recherche d'un emploi</p>
+                    <h2 class="accent">UX/UI Designer</h2>
+                    <p>À la recherche d'un emploi</p>
                     <p class="chocolate">26 ans - Ciney, Belgique</p>
                 </div>
                 <div class="resume">
                     <div class="download_resume">
                         <a href="img/content/nikola_henry_cv.pdf" download="Nikola Henry - CV">Télécharger mon CV</a>
                     </div>
-                    <a href="#">Me contacter</a>
+                    <a href="https://nikolahenry.typeform.com/to/SN907B" target="_blank">Me contacter</a>
                 </div>
             </section>
-            <section class="social social_grid">
-                <ul>
+            <section class="social">
+                <ul class="social_grid">
                     <li>
                         <a href="https://www.facebook.com/nikola.henry/" target="_blank"></a>
                     </li>
@@ -88,23 +88,23 @@
                 <h3>Sélection de travaux personnels</h3>
             </div>
             <section class="works_links">
-                <a href="#">
+                <a href="transmedia.html">
                     <img src="img/content/amal_cover.jpg" alt="Architecture Transmédia" title="Projet Amal - Architecture transmédia">
                 </a>
-                <a href="#">
+                <a href="playzone.html">
                     <img src="img/content/playzone_interface_big.png" alt="UI/UX Design" title="Domaine de Chevetogne - UI/UX Design">
                 </a>
-                <a href="#">
+                <a href="illustration.html">
                     <img src="img/content/vector_2.png" alt="Illustration Web" title="Illustration vectorielle orientée web">
                 </a>
-                <a href="#">
+                <a href="design.html">
                     <img src="img/content/tag_cover.png" alt="Design graphique" title="Projet personnel - Créations numériques">
                 </a>
             </section>
         </article>
         <section class="services">
             <section class="container">
-                <div class="sevices_title">
+                <div class="services_title">
                     <span>Services</span>
                     <h2>Ce que je sais faire</h2>
                 </div>
@@ -167,7 +167,7 @@
                             <img src="img/logos/laniche.png" alt="Logo La Niche" title="La Niche, agence web namuroise - Unleash the right digital solutions">
                             <button type="button" class="pro_dropdown"></button>
                         </div>
-                        <div class="pro_details">
+                        <div class="pro_details hidden">
                             <h4>Stage de fin de formation</h4>
                             <ul>
                                 <li>Branding</li>
@@ -187,7 +187,7 @@
                             <img src="img/logos/twist.png" alt="Logo Cluster TWIST" title="TWIST, cluster orienté business d'entreprises wallones du secteur audiovisuel">
                             <button type="button" class="pro_dropdown"></button>
                         </div>
-                        <div class="pro_details">
+                        <div class="pro_details hidden">
                             <h4>Stage scolaire</h4>
                             <ul>
                                 <li>Gestion de newsletters</li>
@@ -212,7 +212,7 @@
                             <img src="img/logos/fdml.png" alt="Logo Fédération des Maisons de la Laïcité" title="FDML, Fédération des Maisons de la Laïcité">
                             <button type="button" class="pro_dropdown"></button>
                         </div>
-                        <div class="pro_details">
+                        <div class="pro_details hidden">
                             <h4>Stage scolaire</h4>
                             <ul>
                                 <li>Création de logos</li>
@@ -233,7 +233,7 @@
         </section>
         <section class="testimonials">
             <h2>Ils m'ont laissé un avis</h2>
-            <ul class="les_avis"> <!--attention, besoin de vrai contenu-->
+            <ul class="les_avis container"> <!--attention, besoin de vrai contenu-->
                 <li class="avis">
                     <figure>
                         <img src="img/testimonials/avis_1.png" alt="portrait de Jean-Michel Saive" title="Jean-Michel Saive, cet incroyable pongiste belge !">
@@ -242,7 +242,7 @@
                             <p class="avis_position">Formateur UX @techobel</p>
                         </figcaption>
                     </figure>
-                    <p><span class="accent">"</span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti magni nostrum a quam, doloremque amet et, voluptas quod provident illum illo cupiditate, accusamus nisi velit modi dolor alias quo odit ab delectus sint. A atque in excepturi harum labore ab, quos repellat iure? Quasi quia, minima culpa officiis debitis optio.</p>
+                    <p class="avis_content"><span class="accent">“</span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti magni nostrum a quam, doloremque amet et, voluptas quod provident illum illo cupiditate, accusamus nisi velit modi dolor alias quo odit ab delectus sint. A atque in excepturi harum labore ab, quos repellat iure? Quasi quia, minima culpa officiis debitis optio.</p>
                 </li>
                 <li class="avis">
                     <figure>
@@ -252,7 +252,7 @@
                             <p class="avis_position">Directeur des abbatoirs d'Anderlecht</p>
                         </figcaption>
                     </figure>
-                    <p><span class="accent">"</span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti magni nostrum a quam, doloremque amet et, voluptas quod provident illum illo cupiditate, accusamus nisi velit modi dolor alias quo odit ab delectus sint. A atque in excepturi harum labore ab, quos repellat iure? Quasi quia, minima culpa officiis debitis optio.</p>
+                    <p class="avis_content"><span class="accent">“</span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti magni nostrum a quam, doloremque amet et, voluptas quod provident illum illo cupiditate, accusamus nisi velit modi dolor alias quo odit ab delectus sint. A atque in excepturi harum labore ab, quos repellat iure? Quasi quia, minima culpa officiis debitis optio.</p>
                 </li>
                 <li class="avis">
                     <figure>
@@ -262,7 +262,7 @@
                             <p class="avis_position">UX Designer</p>
                         </figcaption>
                     </figure>
-                    <p><span class="accent">"</span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti magni nostrum a quam, doloremque amet et, voluptas quod provident illum illo cupiditate, accusamus nisi velit modi dolor alias quo odit ab delectus sint. A atque in excepturi harum labore ab, quos repellat iure? Quasi quia, minima culpa officiis debitis optio.</p>
+                    <p class="avis_content"><span class="accent">“</span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti magni nostrum a quam, doloremque amet et, voluptas quod provident illum illo cupiditate, accusamus nisi velit modi dolor alias quo odit ab delectus sint. A atque in excepturi harum labore ab, quos repellat iure? Quasi quia, minima culpa officiis debitis optio.</p>
                 </li>
             </ul>
         </section>
@@ -319,5 +319,6 @@
             </div>
         </section>
     </footer>
+    <script src="js/main.js"></script>
 </body>
 </html>
