about presque terminée

--- a/about.html
+++ b/about.html
@@ -209,38 +209,63 @@
                 <ul class="formations"> <!--probablement en flex, je vois pas comment faire ça en grid sans intégrer le titre dans la grid-->
                     <li class="school technobel">
                         <span class="date accent">09/19 - 04/20</span>
-                        <h3>UX/UI Designer</h3>
-                        <p>Formation</p>
-                        <p>Technobel Ciney</p>
-                        <a href="https://www.technobel.be/fr/" class="school_link" target="_blank">technobel.be</a>
+                        <div class="school_content">
+                            <h3>UX/UI Designer</h3>
+                            <p>Formation</p>
+                            <p>Technobel Ciney</p>
+                        </div>
+                        <div class="school_more">
+                            <a href="https://www.technobel.be/fr/" class="school_link" target="_blank">technobel.be</a>
+                            <div class="form_emojis"></div>
+                        </div>
                     </li>
                     <li class="school designinnovation">
                         <span class="date accent">11/18 - 02/19</span>
-                        <h3>Creative Web Designer</h3>
-                        <p>Formation</p>
-                        <p>Design Innovation Charleroi</p>
-                        <a href="https://www.designinnovation.be/" class="school_link" target="_blank">designinnovation.be</a>
+                        <div class="school_content">
+                            <h3>Creative Web Designer</h3>
+                            <p>Formation</p>
+                            <p>Design Innovation Charleroi</p>
+                        </div>
+                        <div class="school_more">
+                            <a href="https://www.designinnovation.be/" class="school_link" target="_blank">designinnovation.be</a>
+                            <div class="form_emojis"></div>
+                        </div>
                     </li>
                     <li class="school talentquest">
                         <span class="date accent">08/19</span>
-                        <h3>TalentQuest</h3>
-                        <p>Révéler son Talent humain et le mettre au service des autres</p>
-                        <p>Espace Co-Working Namur</p>
-                        <a href="http://www.talent-live.org/quest/" class="school_link" target="_blank">talent-live.org/quest</a>
+                        <div class="school_content">
+                            <h3>TalentQuest</h3>
+                            <p>Révéler son Talent humain et le mettre au service des autres</p>
+                            <p>Espace Co-Working Namur</p>
+                        </div>
+                        <div class="school_more">
+                            <a href="http://www.talent-live.org/quest/" class="school_link" target="_blank">talent-live.org/quest</a>
+                            <div class="form_emojis"></div>
+                        </div>
                     </li>
                     <li class="school mat">
                         <span class="date accent">09/16 - 06/18</span>
-                        <h3>Architecture Transmédia</h3>
-                        <p>Master 120 crédits - Satisfaction</p>
-                        <p>HEAJ - UNamur - IMEP</p>
-                        <a href="http://www.heaj.be" class="school_link" target="_blank">heaj.be</a>
+                        <div class="school_content">
+                            <h3>Architecture Transmédia</h3>
+                            <p>Master 120 crédits - Satisfaction</p>
+                            <p>HEAJ - UNamur - IMEP</p>
+                        </div>
+                        <div class="school_more">
+                            <a href="http://www.heaj.be" class="school_link" target="_blank">heaj.be</a>
+                            <div class="form_emojis"></div>
+                        </div>
                     </li>
                     <li class="school heaj">
                         <span class="date accent">09/12 - 06/16</span>
-                        <h3>Illustration/animation 2D</h3>
-                        <p>Bachelier</p>
-                        <p>HEAJ Namur</p>
-                        <a href="http://www.heaj.be" class="school_link" target="_blank">heaj.be</a>
+                        <div class="school_content">
+                            <h3>Illustration/animation 2D</h3>
+                            <p>Bachelier</p>
+                            <p>HEAJ Namur</p> 
+                        </div>
+                        <div class="school_more">
+                            <a href="http://www.heaj.be" class="school_link" target="_blank">heaj.be</a>
+                            <div class="form_emojis"></div>
+                        </div>
                     </li>
                 </ul>
             </div>
