about me page réellement terminée en CSS !

--- a/about.html
+++ b/about.html
@@ -204,8 +204,10 @@
         </section>
         <section class="formation">
             <div class="container">
-                <h2>Formation</h2>
-                <p>Pendant mes études, j’ai d’abord suivi une orientation artistique et audiovisuelle. Je me suis ensuite reconverti vers le design web et j’y ai trouvé ma passion. J’utilise mes compétences acquises pendant mes études pour enrichir mes interfaces et mes parcours utilisateurs, quel que soit le support.</p>
+                <div class="formation_title">
+                    <h2>Formation</h2>
+                    <p>Pendant mes études, j’ai d’abord suivi une orientation artistique et audiovisuelle. Je me suis ensuite reconverti vers le design web et j’y ai trouvé ma passion. J’utilise mes compétences acquises pendant mes études pour enrichir mes interfaces et mes parcours utilisateurs, quel que soit le support.</p>
+                </div>
                 <ul class="formations"> <!--probablement en flex, je vois pas comment faire ça en grid sans intégrer le titre dans la grid-->
                     <li class="school technobel">
                         <span class="date accent">09/19 - 04/20</span>
