début css des case studies

--- a/design.html
+++ b/design.html
@@ -40,7 +40,7 @@
         <header class="signature container">
             <nav class="second_nav">
                 <a href="transmedia.html">
-                    Précédent
+                    <p>Précédent</p>
                     <span>Projet Amal (transmédia)</span>
                 </a>
                 <h2 class="case_type">
@@ -48,13 +48,13 @@
                     <span>Showcase</span>
                 </h2>
                 <a href="illustration.html">
-                    Suivant
+                    <p>Suivant</p>
                     <span>Illustrations web</span>
                 </a>
             </nav>
             <h1>
                 Créations numériques
-                <span>Projet personnel</span>
+                <span class="accent">Projet personnel</span>
             </h1>
             <section class="overview container">
                 <ul class="overview_top">
