--- a/illustration.html
+++ b/illustration.html
@@ -40,7 +40,7 @@
         <header class="illu_web container">
             <nav class="second_nav">
                 <a href="design.html">
-                    Précédent
+                    <p>Précédent</p>
                     <span>Design graphique</span>
                 </a>
                 <h2 class="case_type">
@@ -48,13 +48,13 @@
                     <span>Showcase</span>
                 </h2>
                 <a href="playzone.html">
-                    Suivant
+                    <p>Suivant</p>
                     <span>Domaine de Chevetogne (UX/UI Design)</span>
                 </a>
             </nav>
             <h1>
                 Dessins vectoriels
-                <span>Projet personnel</span>
+                <span class="accent">Projet personnel</span>
             </h1>
             <section class="overview container">
                 <ul class="overview_top">
