--- a/playzone.html
+++ b/playzone.html
@@ -40,7 +40,7 @@
         <header class="playzone container">
             <nav class="second_nav">
                 <a href="illustration.html">
-                    Précédent
+                    <p>Précédent</p>
                     <span>Illustrations web</span>
                 </a>
                 <h2 class="case_type">
@@ -48,13 +48,13 @@
                     <span>étude de cas</span>
                 </h2>
                 <a href="transmedia.html">
-                    Suivant
+                    <p>Suivant</p>
                     <span>Projet Amal (transmédia)</span>
                 </a>
             </nav>
             <h1>
                 Domaine de Chevetogne
-                <span>Playzone 2019</span>
+                <span class="accent">Playzone 2019</span>
             </h1>
             <section class="overview container">
                 <ul class="overview_top">
@@ -72,7 +72,7 @@
                         <p>Workshop Playzone 2019</p>
                     </li>
                 </ul>
-                <h2 class="overview_title">
+                <h2 class="overview_title accent">
                     <strong>Objet</strong>
                     Création d'un outil collectif, collaboratif et digital de recensement de faune et flore spécifique au Domaine
                 </h2>
