--- a/transmedia.html
+++ b/transmedia.html
@@ -40,7 +40,7 @@
         <header class="transmedia container">
             <nav class="second_nav">
                 <a href="playzone.html">
-                    Précédent
+                    <p>Précédent</p>
                     <span>Domaine de Chevetogne (UX/UI Design)</span>
                 </a>
                 <h2 class="case_type">
@@ -48,13 +48,13 @@
                     <span>étude de cas</span>
                 </h2>
                 <a href="design.html">
-                    Suivant
+                    <p>Suivant</p>
                     <span>Design graphique</span>
                 </a>
             </nav>
             <h1>
                 Projet Amal
-                <span>MAT - Master en Architecture Transmédia</span>
+                <span class="accent">MAT - Master en Architecture Transmédia</span>
             </h1>
             <section class="overview container">
                 <ul class="overview_top">
@@ -74,7 +74,7 @@
                         <p>HEAJ - UNamur - IMEP</p>
                     </li>
                 </ul>
-                <h2 class="overview_title">
+                <h2 class="overview_title accent">
                     <strong>Objet</strong>
                     Création d'un univers transmédia LGBT+ engagé avec une représentation réaliste de la diversité humaine
                 </h2>
