page playtogne terminée en CSS !!!

--- a/playzone.html
+++ b/playzone.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" type="image/png" href="img/emoji/rocket.png">
 </head>
-<body>
+<body class="playtogne">
     <nav class="nav"> <!--La navigation-->
         <section class="container">
             <a href="index.html" class="home_link">Nikola</a>
@@ -118,20 +118,22 @@
             <section class="audience">
                 <h3>Audience et utilisateurs</h3>
                 <p>Pour cet outil, deux types de profils utilisateurs se distinguent : visiteurs et administrateurs de l’outil. Des personas ont été créés pour chaque type d’utilisateur.</p>
-                <div class="users">
-                    <h4>Visiteurs</h4>
-                    <ul class="users_types">
-                        <li>amoureux de la nature</li>
-                        <li>familles</li>
-                        <li>naturalistes</li>
-                    </ul>
-                </div>
-                <div class="users">
-                    <h4>Administrateurs<span>(mon focus)</span></h4>
-                    <ul class="users_types">
-                        <li>responsable nature du parc</li>
-                        <li>responsable communication et web du parc</li>
-                    </ul>
+                <div class="audience_content">
+                    <div class="users">
+                        <h4>Visiteurs <span class="accent">&nbsp;</span></h4>
+                        <ul class="users_types">
+                            <li>amoureux de la nature</li>
+                            <li>familles</li>
+                            <li>naturalistes</li>
+                        </ul>
+                    </div>
+                    <div class="users">
+                        <h4>Administrateurs<span class="accent">(mon focus)</span></h4>
+                        <ul class="users_types">
+                            <li>responsable nature du parc</li>
+                            <li>responsable communication et web du parc</li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <section class="fonctionnalites">
@@ -155,7 +157,7 @@
             </section>
             <section class="user_journey">
                 <h3>Parcours utilisateur</h3>
-                <p>Une fois les problèmes découpés en tâches à effectués, il s’agit de les placer dans un ordre qui fasse sens afin de résoudre ces problèmes et rendre le produit utilisable.</p>
+                <p>Une fois les problèmes découpés en tâches à effectuer, il s’agit de les placer dans un ordre qui fasse sens afin de résoudre ces problèmes et rendre le produit utilisable.</p>
                 <ul class="parcours">
                     <li class="step">
                         <h4>Avant</h4>
@@ -189,7 +191,7 @@
             <section class="en_pratique">
                 <div class="pratique">
                     <h3>En pratique</h3>
-                    <p>Mon travail d'UX m'a permis d'élaborer des écrans d'interface du panneau d'administration de cet outil de recensement</p>
+                    <p>Mon travail d'UX m'a permis d'élaborer des écrans d'interface du panneau d'administration de cet outil de recensement.</p>
                 </div>
                 <div class="pratique">
                     <ol class="processus">
@@ -208,7 +210,7 @@
             <section class="design_sytem">
                 <h2>Design System</h2>
                 <img src="img/content/playzone_typographie.png" alt="Typographie" title="Nos choix typographiques se sont arrêtés sur ces polices">
-                <h3>Couleurs</h3>
+                <h3 class="color_title">Couleurs</h3>
                 <div class="couleurs">
                     <div class="color">
                         <p>Vert</p>
